# DCP_sia_Backend

./: .env  .gitignore  Dockerfile  LICENSE  README.md  env.yaml  pyproject.toml  requirements.freeze.txt  requirements.top.txt  requirements.tree.txt
app/: __init__.py  main.py
app/api/: deps.py  routes_anonymize.py  routes_bench.py  routes_files.py  routes_jobs.py  routes_scan.py
app/connectors/: base.py  filesystem.py  s3.py
app/core/: __init__.py  config.py
app/db/: __init__.py
app/detectors/: ensemble.py  hf_ner_detector.py  pii_codex_detector.py  piiranha.py  piiscan_detector.py  presidio_detector.py  regex_detector.py  spacy_detector.py
app/extractors/: base.py  docx_extractor.py  ocr_extractor.py  text_extractor.py
app/jobs/: queue.py  worker.py
app/services/: anonymizer.py  ocr.py  orchestrator.py  pipeline_images.py  pipeline_text.py  scoring.py
data/: app.db
dcp_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: download_models.py
