[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcp-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "backports.tarfile",
  "boto3",
  "docx",
  "httptools",
  "importlib-metadata",
  "jaraco.collections",
  "fastapi",
  "uvicorn[standard]",
  "openpyxl",
  "pdfminer-six",
  "pdfplumber",
  "pip-chill",
  "pipdeptree",
  "platformdirs",
  "presidio-analyzer",
  "presidio-anonymizer",
  "protobuf",
  "psycopg2-binary",
  "pydantic-settings",
  "pytesseract",
  "python-multipart",
  "tesseract",
  "sentencepiece",
  "sqlalchemy",
  "tomli",
  "torch",
  "gliner",
  "transformers",
  "uvloop",
  "watchfiles",
  "websockets"
]

[tool.setuptools]
packages = {find = {where = ["."] , include = ["app*"]}}
