[tool.poetry]
name = "DCP_Eval"
version = "0.1.0"
description = ""
authors = ["Henri"]

[build-system]
requires = ["setuptools>=68", "wheel","poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dcp-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "backports.tarfile",
  "boto3",
  "docx",
  "httptools",
  "importlib-metadata",
  "jaraco.collections",
  "fastapi",
  "uvicorn[standard]",
  "openpyxl",
  "pdfminer-six",
  "scikit-learn",
  "numpy<2",
  "pdfplumber",
  "pip-chill",
  "pipdeptree",
  "platformdirs",
  "presidio-analyzer",
  "presidio-anonymizer",
  "protobuf",
  "psycopg2-binary",
  "pydantic-settings",
  "pytesseract",
  "python-multipart",
  "tesseract",
  "sentencepiece",
  "sqlalchemy",
  "tomli",
  "torch==2.2.2+cpu",
  "gliner",
  "transformers",
  "uvloop",
  "watchfiles",
  "websockets"
]

[tool.setuptools]
packages = {find = {where = ["."] , include = ["app*"]}}
