[tool.poetry]
name = "DCP_Eval"
version = "0.1.0"
description = ""
authors = ["Henri"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dcp-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "backports.tarfile",
  "boto3",
  "docx",
  "httptools",
  "importlib-metadata",
  "jaraco.collections",
  "fastapi",
  "uvicorn[standard]",
  "openpyxl",
  "pdfminer-six",
  "scikit-learn",
  "numpy<2",
  "pdfplumber",
  "pip-chill",
  "pipdeptree",
  "platformdirs",
  "presidio-analyzer",
  "presidio-anonymizer",
  "protobuf",
  "psycopg2-binary",
  "pydantic-settings",
  "python-multipart",
  "paddleocr",
  "paddlepaddle==2.6.2",
  "paddlex[ocr-core]==3.3.12",
  "opencv-python-headless<4.9",
  "sentencepiece",
  "sqlalchemy",
  "tomli",
  "torch==2.7.0",
  "gliner",
  "transformers",
  "uvloop",
  "watchfiles",
  "websockets"
]

[tool.setuptools]
packages = {find = {where = ["."] , include = ["app*"]}}
